Limpezar e otimazacoes warnings